tests/invalid/constructor_wrong_arg_count_no_params/main.py
class Pair:
    x: int
    y: int

    def __init__(self, x: int, y: int) -> None:
        self.x = x
        self.y = y

p: Pair = Pair(1)
